# kanban

./: .dockerignore  .env.docker  .gitignore  AGENTS.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  MARKETING.md  README.md  TODO.txt  manage.py  pyproject.toml  pyrightconfig.json  test_org_team_cli.py
.github/workflows/: ci.yml  deploy-production.yml  publish-pypi.yml
backend/: api.py  auth.py  conftest.py  create_user.py  database.py  main.py  manage.py  models.py  requirements.txt  test_routes.py
backend/migrations/: 001_unix_permissions.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_api_keys.py  test_cli.py  test_invites.py  test_jwt_secret.py  test_permissions.py  test_routes.py
docs/: DOCKER.md  auth.md  cli-reference.md  commands.md  docs.md  multi-tenant.md  quickstart.md  reference.md  theme-system.md  workflows.md
docs-public/: _config.yml  index.md  quickstart.md  reference.md
docs-public/_layouts/: default.html
docs/commands/: apikey.md  board-create.md  board-delete.md  board.md  boards.md  card.md  column.md  config.md  login.md  logout.md  org.md  share.md  team.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/content/: apikey-activate.md  apikey-create.md  apikey-list.md  apikey-revoke.md  apikey-use.md  board-create.md  board-delete.md  board.md  boards.md  card-create.md  card-delete.md  card-update.md  column-create.md  column-delete.md  commands.md  config.md  docs.md  (+17 more)
kanban/: __init__.py  __main__.py  cli.py  client.py  config.py  pyproject.toml
scripts/: generate_cli_docs.py
sys/: DEPLOYMENT.md
(+55 files in other folders)
